Cambios para las facturas y cambios para el admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -347,6 +347,12 @@
                 <!-- Reservation rows will be populated by JavaScript -->
               </tbody>
             </table>
+            <!-- Pagination Controls -->
+            <nav aria-label="Reservation pagination">
+              <ul class="pagination justify-content-center" id="reservation-pagination">
+                <!-- Pagination items will be populated by JavaScript -->
+              </ul>
+            </nav>
           </div>
 
           <!-- View Payments View -->
@@ -367,6 +373,12 @@
                 <!-- Tour rows will be populated by JavaScript -->
               </tbody>
             </table>
+            <!-- Pagination Controls -->
+            <nav aria-label="Invoice pagination">
+              <ul class="pagination justify-content-center" id="invoice-pagination">
+                <!-- Pagination items will be populated by JavaScript -->
+              </ul>
+            </nav>
           </div>
 
           <!-- Add other management views here as needed -->
