Cambios en el flujo de la creacion de las pre-reservas, hold, pago y reserva2

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -332,6 +332,13 @@
           <div id="reservation-manage-view" class="management-view" style="display: none;">
             <h3>Administrar Reservas</h3>
             <p>Ver y gestionar reservas.</p>
+
+            <!-- Search Bar -->
+            <div class="mb-3">
+              <input type="text" class="form-control" id="reservation-search"
+                placeholder="Buscar por ID, código o estado...">
+            </div>
+
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -359,6 +366,13 @@
           <div id="payment-view-view" class="management-view" style="display: none;">
             <h3>Historial de Pagos</h3>
             <p>Lista de facturas emitidas.</p>
+
+            <!-- Search Bar -->
+            <div class="mb-3">
+              <input type="text" class="form-control" id="invoice-search"
+                placeholder="Buscar por ID de factura, ID de reserva o número...">
+            </div>
+
             <table class="table table-striped">
               <thead>
                 <tr>
