Fixed tour filter to use category codes

--- a/pages/tours.html
+++ b/pages/tours.html
@@ -102,8 +102,8 @@
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-type" aria-label="Tour Type">
                       <option value="">Tipo de Tour</option>
-                      <option value="Interior">Interior</option>
-                      <option value="Aire Libre">Aire Libre</option>
+                      <option value="INTERIORES">Interior</option>
+                      <option value="AIRE_LIBRE">Aire Libre</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-6 mb-3">
