Validacion de reservas y facturas en el perfil de usuario 6

--- a/pages/user.html
+++ b/pages/user.html
@@ -123,19 +123,9 @@
               <!-- Payment History Tab -->
               <div class="tab-pane fade" id="v-pills-payments" role="tabpanel" aria-labelledby="v-pills-payments-tab">
                 <h3>Historial de Pagos</h3>
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">Fecha</th>
-                      <th scope="col">Descripción</th>
-                      <th scope="col">Monto</th>
-                      <th scope="col">Estado</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!-- Invoices will be loaded dynamically by UserController.js -->
-                  </tbody>
-                </table>
+                <div class="list-group">
+                  <!-- Invoices will be loaded dynamically by UserController.js -->
+                </div>
               </div>
             </div>
           </div>
