No se ve en el carrito el campo Nro Cliente solo el número de cuenta

--- a/pages/car.html
+++ b/pages/car.html
@@ -89,10 +89,10 @@
                 <h5>Total</h5>
                 <h5 id="cart-total">$0.00</h5>
               </div>
-              <div class="mb-3">
+              <!-- <div class="mb-3">
                 <label for="nro-cliente" class="form-label">Nro. Cliente</label>
                 <input type="text" class="form-control" id="nro-cliente">
-              </div>
+              </div> -->
               <div class="mb-3">
                 <label for="nro-cuenta" class="form-label">Nro. Cuenta</label>
                 <input type="text" class="form-control" id="nro-cuenta">
